update layout issues on mobile

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -3,7 +3,6 @@
     text-decoration: none;
     display: flex;
     justify-content: space-between;
-    border-bottom: 0.25rem solid black;
     width: 75%;
     margin: 0 auto;
     border: black 0.25rem solid;
