--- a/components/ImageModal/ImageModal.module.css
+++ b/components/ImageModal/ImageModal.module.css
@@ -1,11 +1,9 @@
 .imageContainer {
-    break-inside: avoid;
     border: black 0.25rem solid;
     border-radius: 0.5%;
     box-shadow: 0.25rem 0.25rem black;
     margin: 0 1rem 1rem;
     transition: 0.3s;
-    padding: 0;
 }
 
 .imageContainer:hover {
@@ -18,16 +16,19 @@
     text-decoration: none;
 }
 
-.photo {
+.modalButton {
     transition: 0.3s;
     background-color: transparent;
     border: none;
+    padding: 0;
+    font-size: large;
 }
 
 .image {
     width: 100%;
     height: auto;
     object-fit: contain;
+    padding: 0;
 }
 
 .thumbnailTitle {
@@ -52,7 +53,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     padding: 1rem;
     position: fixed;
     top: 50%;
@@ -64,6 +64,7 @@
     box-shadow: 0.25rem 0.25rem black;
     width: fit-content;
     height: fit-content;
+    max-height: 90vh;
     z-index: 999999;
     opacity: 0;
     animation: fadeIn 0.5s forwards;
@@ -111,14 +112,21 @@
     color: #f8f8f8;
 }
 
+.modalImageLink {
+    max-height: 70vh;
+    width: fit-content;
+}
+
 .modalImage {
     object-fit: contain;
-    width: 100%;
+    height: 100%;
+    width: auto;
 }
 
 .imageCamera {
     font-size: large;
     font-family: josefin-bold;
+    padding-top: 1rem;
 }
 
 .imageFilm {
@@ -131,28 +139,7 @@
         display: block;
     }
 
-    .photo {
+    .modalButton {
         display: none;
     }
-
-    .modalContent {
-        max-height: 90vh;
-    }
-
-    .closeButton {
-        font-size: smaller;
-        height: fit-content;
-        width: fit-content;
-        aspect-ratio: 0;
-    }
-
-    .imageTitle {
-        font-size: smaller;
-    }
-
-    .modalImage {
-        width: 100%;
-        height: auto;
-    }
-
 }
