--- a/styles/globals.css
+++ b/styles/globals.css
@@ -110,13 +110,14 @@
 
 html {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
 }
 
 body {
     background-color: #f7efe0;
+    height: 100vh;
 }
 
 *,
